<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:srcCompat="@drawable/long_papirus"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alex_brush"
        android:text="Prenom/numéro/dynastie"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.343" />

    <TextView
        android:id="@+id/DayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="Jour : "
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/NameText"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="@+id/NameText"
        app:layout_constraintTop_toBottomOf="@+id/NameText" />

    <!-- Barres de vie entre les deux images -->

    <TextView
        android:id="@+id/dayInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="0"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/NameText"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="@+id/NameText"
        app:layout_constraintTop_toBottomOf="@+id/NameText" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/SatisfactionText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/satisfaction"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/SatisfactionBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                android:progressTint="@android:color/holo_green_light"
                app:layout_constraintWidth_percent="0.85" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EconomyText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/economy"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/EconomyBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="70"
                android:progressTint="@android:color/holo_orange_light"
                app:layout_constraintWidth_percent="0.85" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/MilitaryText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/military"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/MilitaryBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="30"
                android:progressTint="@android:color/holo_red_light"
                app:layout_constraintWidth_percent="0.85" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/FaithText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/faith"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/FaithBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="90"
                android:progressTint="@android:color/holo_blue_light"
                app:layout_constraintWidth_percent="0.85" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintWidth_percent="0.9"
        app:srcCompat="@drawable/papyrus" />

    <TextView
        android:id="@+id/RequestText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="cursive"
        android:text="Requette"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.274"
        tools:text="Texte de la requette" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imageView9">

        <Button
            android:id="@+id/AcceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#157C21"
            android:text="@string/accept_button"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintWidth_percent="0.35" />

        <Button
            android:id="@+id/RefuseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#BB0000"
            android:text="@string/refuse_button"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintWidth_percent="0.35"
            tools:text="@string/refuse_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
